MISC: Dockerfile-cibuild: use /root/.electron/*.zip download cache if present
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/misc/Dockerfile-cibuild
+++ b/misc/Dockerfile-cibuild
@@ -9,8 +9,10 @@ WORKDIR /usr/src/beast
 # make sure getpwuid() works, and ~/ is writable, otherwise many tools break
 ARG USERGROUP
 RUN : && \
-  mkdir -m 0755 -p /home/cibuilder/ && \
+  mkdir -m 0755 -p /home/cibuilder/.electron/ && \
   groupadd --gid ${USERGROUP#*:} cibuilder && \
   useradd --uid ${USERGROUP%:*} --gid ${USERGROUP#*:} --home-dir /home/cibuilder cibuilder && \
+  { ! compgen -G "/root/.electron/*.zip" >/dev/null || \
+      cp --reflink=auto --preserve=timestamps /root/.electron/*.zip /home/cibuilder/.electron/ ; } && \
   chown -R ${USERGROUP} /home/cibuilder
 # Also copies pre-fetched electron download
