--- a/misc/Dockerfile-yum
+++ b/misc/Dockerfile-yum
@@ -16,9 +16,29 @@ RUN retry yum -y upgrade
 RUN retry yum -y install \
     findutils file bzip2 \
     gcc-c++ git libtool gettext-devel perl-XML-Parser \
-    alsa-lib-devel flac-devel libgnomecanvas-devel libvorbis-devel fluidsynth-devel libmad-devel \
+    alsa-lib-devel flac-devel libgnomecanvas-devel libvorbis-devel libmad-devel \
     pandoc python3-pandocfilters doxygen graphviz \
-    npm ImageMagick libXScrnSaver GConf2
+    npm ImageMagick libXScrnSaver GConf2 \
+    libsndfile-devel cmake
+
+# Build stripped down fluidsynth version without drivers
+RUN mkdir -p /tmp/fluid/build && cd /tmp/fluid/ && \
+  curl -sfSOL https://github.com/FluidSynth/fluidsynth/archive/v2.0.4.tar.gz && \
+  tar xf v2.0.4.tar.gz && rm v2.0.4.tar.gz && cd build && \
+  cmake ../fluidsynth-2.0.4 \
+	-DCMAKE_INSTALL_PREFIX=/usr/ \
+	-Denable-libsndfile=1 \
+	-Denable-dbus=0 \
+	-Denable-ipv6=0 \
+	-Denable-jack=0 \
+	-Denable-midishare=0 \
+	-Denable-network=0 \
+	-Denable-oss=0 \
+	-Denable-pulseaudio=0 \
+	-Denable-readline=0 \
+	-Denable-alsa=0 \
+	-Denable-lash=0 && \
+  make && make install && cd / && rm -rf /tmp/fluid/
 
 # Setup build environment and provide the git repositories
 COPY ./.git/ /tmp/beast.git
