MISC: cibuild.sh, Dockerfile-cibuild: utilize ~/.electron/ as .cicache/
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/misc/Dockerfile-cibuild
+++ b/misc/Dockerfile-cibuild
@@ -16,3 +16,5 @@ RUN : && \
       cp --reflink=auto --preserve=timestamps /root/.electron/*.zip /home/cibuilder/.electron/ ; } && \
   chown -R ${USERGROUP} /home/cibuilder
 # Also copies pre-fetched electron download
+
+COPY .cicache/electron/ /home/cibuilder/.electron/
