Squash 'external/v8pp' changes from cda26b60e..792dd225fa42
792dd225f bump node package version 1.6.0
d2e4d6b95 Merge branch 'atvise-add_set_static_function'
8d59bcafc add static property example to docs
1eeb5048d fix test case for `v8pp::class_::set_static()`
7eebfdc6d Merge branch 'atvise-add_generic_to_json_function'
902f9734c extract `v8pp::class_::set_json()` as a free function `v8pp::json_object()`
318dc0496 revert back test case with custom `X::toJSON()` implementation
762866bf0 Added possibility to add generic "toJSON" function to class with set_json function
9e58e9785 use `v8::JSON::Stringify/Parse` functions in `v8pp::json_str/parse()`
2b49dec81 fix compiler warnings about unused variables and function arguments
d677a874a fix `context::run_script()` with run-time error
131f50a8e add test case for exception from C++ ctor
a159a8e22 Added third parameter to be able to set the PropertyAttribute e.g. v8::PropertyAttribute::DontEnum
db0f11009 Merge remote-tracking branch 'remotes/origin/atvise-fix_deprecated_usage'
910eb7186 remove obsolete scripts for V8 library building
c00de7a1b support V8 6.3 and newer
e539bd2cc bump node package version 1.5.2
f9ea6260f Added set_static function to object_registry
930e4983f add `invalid_argument` exception and throw it from `convert::from_v8()`
5774dd0ae add a test case for `JSON.stringify()` with wrapped class (issue #88)
d1969f06f fix deprecated usage of v8::String::Value
6e6b51917 Refactored throw_ex function
b808c7635 Fixed deprecated usage of v8::String::Value constructor
a22d82ae8 use `std::function` for wrapped class ctor and dtor lambdas
b7cbf9b9d bump node package version 1.5.1
47a56b6ee update V8 NuGet packages to version 6.9
d3040a85a fix `context::run_script()` with syntax error
8944b491d disable RTTI in Ninja build
516b75131 fix Travis CI build for V8 versions 6.{1,2,3}
f9bde4ec7 switch Travis CI build to xenial
bb57a7cdb add more V8 versions into Travis CI build
7a8b38970 make `require()` and `run()` globals in

--- a/v8pp/v8pp.vcxproj.filters
+++ b/v8pp/v8pp.vcxproj.filters
@@ -2,6 +2,10 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <ClCompile Include="context.cpp" />
+    <ClCompile Include="json.cpp" />
+    <ClCompile Include="class.cpp" />
+    <ClCompile Include="throw_ex.cpp" />
+    <ClCompile Include="convert.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="context.hpp" />
@@ -18,8 +22,13 @@
     <ClInclude Include="function.hpp" />
     <ClInclude Include="object.hpp" />
     <ClInclude Include="json.hpp" />
+    <ClInclude Include="ptr_traits.hpp" />
+    <ClInclude Include="persistent.hpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="class.ipp" />
+    <None Include="json.ipp" />
+    <None Include="throw_ex.ipp" />
   </ItemGroup>
 </Project>
