--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,21 @@
 language: c++
 
 sudo: required
-dist: trusty
+dist: xenial
 
 compiler:
   - gcc
   - clang
 
 env: 
-  - V8_VERSION=4.10
-  - V8_VERSION=5.2
-  - V8_VERSION=5.4
+  - V8_VERSION=6.3
+  - V8_VERSION=6.4
+  - V8_VERSION=6.5
+  - V8_VERSION=6.6
 
 before_install:
-  - sudo add-apt-repository ppa:pinepain/libv8-"$V8_VERSION" -y
+  - sudo add-apt-repository ppa:pinepain/libv8-archived -y
+  - sudo add-apt-repository ppa:pinepain/libv8 -y
   - sudo apt-get update -q
   - sudo apt-get install libv8-"$V8_VERSION"-dev -y
 
@@ -22,4 +24,4 @@ install:
   
 script: make
 
-after_success: LD_LIBRARY_PATH=. ./v8pp_test -v --run-tests test/console.js test/file.js
+after_success: LD_LIBRARY_PATH=.:/opt/libv8-${V8_VERSION}/lib ./v8pp_test -v --run-tests test/console.js test/file.js
