--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "v8pp",
-  "version": "1.4.1",
+  "version": "1.6.0",
   "description": "C++ bindings for V8",
   "keywords": [ "V8", "native", "addon", "module", "bindings" ],
+  "engines": { "node": ">=8.0.0" },
   "main": "include_dirs.js",
   "repository": { "type": "git", "url": "git://github.com/pmed/v8pp.git" },
   "author": "Pavel Medvedev <pmedvedev@gmail.com>",
   "license": "BSL-1.0",
   "bugs": { "url": "https://github.com/pmed/v8pp/issues"  },
   "homepage": "https://github.com/pmed/v8pp#readme",
-  "files": ["docs", "examples", "v8pp/*.hpp", "include_dirs.js",
+  "files": ["docs", "examples", "v8pp/*.hpp", "v8pp/*.ipp", "include_dirs.js",
     "COPYING", "LICENSE_1_0.txt", "README.md"
   ]
 }
