MISC: Dockerfile-bionic: upgrade dependenccies and optimize image
* Upgrade pandoc to 2.7.3.
* Upgrade fluidsynth to 2.0.5.
* Install new dependency libboost-system-dev.
* Remove caching of outdated electron tarball.
* Delete unused documentation files like locale/, info/ and man/.
* Use eatmydata for apt-get everywhere to significantly speed up builds.

Signed-off-by: Tim Janik <timj@gnu.org>

--- a/misc/Dockerfile-bionic
+++ b/misc/Dockerfile-bionic
@@ -13,15 +13,22 @@ RUN \
   echo '## Provide /bin/retry' && \
   echo -e '#!/bin/bash\n"$@" || { sleep 15 ; "$@" ; } || { sleep 90 ; "$@" ; }' > /bin/retry && chmod +x /bin/retry && \
   \
+  echo '## Avoid unused documentation' && \
+  mkdir mkdir  /etc/dpkg/dpkg.conf.d && \
+  echo -e > /etc/dpkg/dpkg.conf.d/01_nodoc \
+       'path-exclude=/usr/share/locale/*\npath-exclude=/usr/share/man/*\npath-exclude=/usr/share/info/*\npath-exclude=/usr/share/groff/*\n' \
+       'path-exclude=/usr/share/lintian/*\npath-exclude=/usr/share/doc/*\npath-include=/usr/share/doc/*/copyright\n' && \
+  \
   echo '## Upgrade packages' && \
-  retry apt-get update && retry apt-get -y upgrade && \
+  retry apt-get update && retry apt-get -y install eatmydata && \
+  retry eatmydata apt-get -y upgrade && \
   \
   echo '## Build stripped down fluidsynth version without drivers' && \
-  retry apt-get install -y build-essential curl cmake libglib2.0-dev && \
+  retry eatmydata apt-get install -y build-essential curl cmake libglib2.0-dev && \
   mkdir -p /tmp/fluid/build && cd /tmp/fluid/ && \
-  curl -sfSOL https://github.com/FluidSynth/fluidsynth/archive/v2.0.4.tar.gz && \
-  tar xf v2.0.4.tar.gz && rm v2.0.4.tar.gz && cd build && \
-  cmake ../fluidsynth-2.0.4 \
+  curl -sfSOL https://github.com/FluidSynth/fluidsynth/archive/v2.0.5.tar.gz && \
+  tar xf v2.0.5.tar.gz && rm v2.0.5.tar.gz && cd build && \
+  cmake ../fluidsynth-2.0.5 \
 	-DCMAKE_INSTALL_PREFIX=/usr/ \
 	-DLIB_SUFFIX="/`dpkg-architecture -qDEB_HOST_MULTIARCH`" \
 	-Denable-libsndfile=1 \
@@ -36,29 +43,28 @@ RUN \
 	-Denable-alsa=0 \
 	-Denable-lash=0 && \
   make && make install && cd / && rm -rf /tmp/fluid/ && \
-  apt-get --purge remove -y cmake && \
+  eatmydata apt-get --purge remove -y cmake && \
   \
   echo '## Provide Beast dependencies, add libXss.so for electron' && \
-  retry apt-get install -y \
+  retry eatmydata apt-get install -y \
 	build-essential automake autoconf autoconf-archive libtool \
 	curl doxygen graphviz texlive-binaries git libxml2-utils \
 	cppcheck clang clang-tidy clang-tools python3-pandocfilters \
-	gawk python2.7-dev python3 \
+	gawk python2.7-dev python3 libboost-system-dev \
 	libxml2-dev libpango1.0-dev libgnomecanvas2-dev \
 	libasound2-dev libflac-dev libvorbis-dev libmad0-dev libgnomecanvas2-dev \
 	imagemagick libgconf-2-4 nodejs npm libxss1 && \
   \
   echo '## Provide recent Pandoc' && \
-  retry curl -ROL 'https://github.com/jgm/pandoc/releases/download/2.7.2/pandoc-2.7.2-1-amd64.deb' && \
-  dpkg -i pandoc-2.7.2-1-amd64.deb && \
-  rm pandoc-2.7.2-1-amd64.deb && \
-  \
-  echo '## Pre-fetch electron download' && \
-  mkdir -p /root/.electron/ && cd /root/.electron/ && \
-  curl -ROL 'https://github.com/electron/electron/releases/download/v2.0.18/electron-v2.0.18-linux-x64.zip' && \
+  retry curl -ROL 'https://github.com/jgm/pandoc/releases/download/2.7.3/pandoc-2.7.3-1-amd64.deb' && \
+  dpkg -i pandoc-2.7.3-1-amd64.deb && \
+  rm pandoc-2.7.3-1-amd64.deb && \
   \
   echo '## Cleanup' && \
-  apt-get --purge remove -y cmake python2.7-dev && \
-  apt-get autoremove -y && \
+  eatmydata apt-get --purge remove -y cmake python2.7-dev && \
+  eatmydata apt-get autoremove -y && \
   apt-get clean && rm -rf /var/lib/apt/lists/* && \
+  find /usr/share/locale/ -mindepth 1 -maxdepth 1 ! -name 'en*' | xargs rm -r && \
+  find /usr/share/doc/ -depth -type f ! -name copyright | xargs rm -f && \
+  rm -rf /usr/share/man/* /usr/share/groff/* /usr/share/info/* /usr/share/lintian/* && \
   :
