--- a/misc/Dockerfile-cibuild
+++ b/misc/Dockerfile-cibuild
@@ -9,6 +9,13 @@ WORKDIR /usr/src/beast
 # make sure getpwuid() works, and ~/ is writable, otherwise many tools break
 ARG USERGROUP
 RUN : && \
+  \
+  echo '## Provide g++ >= 8' && \
+  retry apt-get update && \
+  retry eatmydata apt-get -y install g++-8 && \
+  update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-7 700 --slave /usr/bin/g++ g++ /usr/bin/g++-7 && \
+  update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-8 800 --slave /usr/bin/g++ g++ /usr/bin/g++-8 && \
+  \
   mkdir -m 0755 -p /home/cibuilder/.electron/ && \
   groupadd --gid ${USERGROUP#*:} cibuilder && \
   useradd --uid ${USERGROUP%:*} --gid ${USERGROUP#*:} --home-dir /home/cibuilder cibuilder && \
