DOCS: doxygen.cfg: customize for latex & PDF generation
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/docs/doxygen.cfg
+++ b/docs/doxygen.cfg
@@ -1,16 +1,19 @@
-PROJECT_NAME		= "Beast - Music Synthesizer and Composer"
 #OUTPUT_DIRECTORY	= doxyhtml/
-GENERATE_LATEX		= NO
 GENERATE_MAN		= NO
 GENERATE_RTF		= NO
 QUIET			= YES
+
+GENERATE_LATEX		= YES
+LATEX_HIDE_INDICES	= YES
 
 FULL_PATH_NAMES		= YES
 CASE_SENSE_NAMES	= YES
 RECURSIVE		= YES
 FILE_PATTERNS		= *
 EXCLUDE			=
+LATEX_BIB_STYLE		= dinat # apalike alpha plain
 CITE_BIB_FILES          = references.bib
+PDF_HYPERLINKS		= YES
 BUILTIN_STL_SUPPORT	= YES
 TYPEDEF_HIDES_STRUCT	= YES
 MAX_INITIALIZER_LINES   = 0
@@ -27,27 +30,35 @@ EXTRACT_ANON_NSPACES	= NO
 JAVADOC_AUTOBRIEF 	= YES
 QT_AUTOBRIEF		= YES
 ABBREVIATE_BRIEF	= YES
-BRIEF_MEMBER_DESC	= NO
+BRIEF_MEMBER_DESC	= YES
 REPEAT_BRIEF		= YES
 ALWAYS_DETAILED_SEC	= YES
 HIDE_IN_BODY_DOCS	= YES
 WARN_IF_UNDOCUMENTED    = NO
 
-INTERNAL_DOCS		= NO
-HIDE_UNDOC_MEMBERS	= NO
+HIDE_UNDOC_MEMBERS	= YES
+HIDE_UNDOC_CLASSES	= YES
+HIDE_UNDOC_RELATIONS	= YES
 HIDE_FRIEND_COMPOUNDS	= YES
+EXCLUDE_SYMBOLS		= "Bse*Class" "Void*Closure" "Ret*Closure" "Bse::*<*<*" "DERIVES_shared_ptr<*"
+INTERNAL_DOCS		= NO
+
+INLINE_GROUPED_CLASSES	= YES
+SEPARATE_MEMBER_PAGES	= NO
 SHOW_USED_FILES 	= YES
 SHOW_INCLUDE_FILES	= YES
-INHERIT_DOCS		= YES
+INHERIT_DOCS		= NO
 ENABLED_SECTIONS	= ""
 
 ENABLE_PREPROCESSING	= YES
 MACRO_EXPANSION		= YES
 EXPAND_ONLY_PREDEF	= YES
-PREDEFINED  = DOXYGEN __SIZEOF_LONG__=8
-PREDEFINED += static_assert(x,y)=
+PREDEFINED = DOXYGEN
+PREDEFINED += __SIZEOF_LONG__=8 static_assert(x,y)=
 PREDEFINED += "record=struct" "sequence=struct" "G_BEGIN_DECLS=" "G_END_DECLS="
 PREDEFINED += "__attribute__(x)="
+PREDEFINED += BSE_ALWAYS_INLINE= BSE_NOINLINE= BSE_COLD= BSE_PRINTF= BSE_NORETURN= BSE_PURE=
+PREDEFINED += protected=private
 
 EXPAND_AS_DEFINED       =
 
@@ -71,9 +82,11 @@ HTML_FOOTER            	= footer.html
 INTERACTIVE_SVG		= YES
 DOT_IMAGE_FORMAT	= svg
 DOT_TRANSPARENT         = YES
+DOT_FONTNAME            = "DejaVuSansMono Bold"
 DOT_FONTNAME 		= "Verdana Bold"
-#DOT_FONTNAME            = "DejaVuSansMono Bold"
-DOT_FONTSIZE            = 11
+DOT_FONTNAME 		= "Charis SIL"
+DOT_FONTPATH		= /usr/share/fonts/truetype/charis
+DOT_FONTSIZE            = 10
 DOT_MULTI_TARGETS	= YES
 DOT_GRAPH_MAX_NODES	= 999
 MAX_DOT_GRAPH_DEPTH	= 1
@@ -94,20 +107,11 @@ ALIASES +=   DEPRECATED="\xrefitem unstable \"Unstable\" \"Unstable API\" @b DEP
 ALIASES +=   deprecated="\xrefitem unstable \"Unstable\" \"Unstable API\" @b DEPRECATED"
 ALIASES += EXPERIMENTAL="\xrefitem unstable \"Unstable\" \"Unstable API\" @b EXPERIMENTAL"
 
-# settings for building slim vs rich docs, see Makefile.am
-VERBATIM_HEADERS	= IFRICH
-REFERENCED_BY_RELATION	= IFRICH
-CLASS_DIAGRAMS		= IFRICH
-CLASS_GRAPH		= IFRICH
-GROUP_GRAPHS		= IFRICH
-TEMPLATE_RELATIONS	= IFRICH
-INCLUDED_BY_GRAPH	= IFRICH
-GRAPHICAL_HIERARCHY	= IFRICH
-DIRECTORY_GRAPH		= IFRICH
-UML_LOOK		= IFRICH
-COLLABORATION_GRAPH	= IFRICH
-TEMPLATE_RELATIONS	= IFRICH
-INCLUDE_GRAPH		= IFRICH
-CALL_GRAPH		= IFRICH
-CALLER_GRAPH		= IFRICH
-HAVE_DOT		= IFRICH
+VERBATIM_HEADERS	= NO # 2s
+REFERENCED_BY_RELATION	= NO # 3s
+HAVE_DOT		= YES
+CLASS_DIAGRAMS		= NO
+GRAPHICAL_HIERARCHY	= NO	# 1s
+COLLABORATION_GRAPH	= NO	# 1.2s
+CLASS_GRAPH		= YES	# 1s
+UML_LOOK		= YES
