MISC: Dockerfile-yum: provide unzip, required to unpack 3rd party libs
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/misc/Dockerfile-yum
+++ b/misc/Dockerfile-yum
@@ -14,7 +14,7 @@ RUN retry yum -y upgrade
 # Install dependencies
 # electron needs libXss.so.1 and libgconf-2.so.4
 RUN retry yum -y install \
-    findutils file bzip2 patch \
+    findutils file bzip2 unzip patch \
     gcc-c++ git libtool gettext-devel perl-XML-Parser boost-devel \
     alsa-lib-devel flac-devel libgnomecanvas-devel libvorbis-devel libmad-devel \
     pandoc python3-pandocfilters doxygen graphviz \
