.travis.yml: skip CI builds for git tags
See also: https://github.com/travis-ci/travis-ci/issues/8051#issuecomment-335517982

Signed-off-by: Tim Janik <timj@gnu.org>

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,9 @@ dist:     xenial
 language: generic
 services: docker
 
+# conditionalize build to ignore tags: https://docs.travis-ci.com/user/conditional-builds-stages-jobs/
+if: tag IS blank
+
 cache:
   directories:
     - ~/cache/
