--- a/misc/Dockerfile-yum
+++ b/misc/Dockerfile-yum
@@ -60,5 +60,8 @@ RUN make install
 RUN make installcheck
 RUN make dist
 RUN make uninstall
+RUN make default prefix=/usr && \
+    make all -j`nproc` && \
+    make appimage
 
 # docker build --build-arg DIST=fedora:27 -f misc/Dockerfile-yum -t beast-fedora-27 .
